--- a/lista.html
+++ b/lista.html
@@ -28,21 +28,19 @@
 <tr>
 <th>Nome</th>
 <th >Tipo</th>
-<th >genero</th>
-<th> nota</th>
+<th >Genero</th>
 </tr>
 <tr>
 <td>Naruto</td>
 <td>Anime</td>
 <td>Ação</td>
-<td>10</td>
+
 
 </tr>
 <tr>
     <td>Velozes e Furiosos</td>
     <td>Filme</td>
     <td>Ação</td>
-    <td>5</td> 
 </tr>
 </table>
         </div>
