--- a/cadastroobra.html
+++ b/cadastroobra.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="cadastroobra.css" media="">
+    <link rel="stylesheet" type="text/css" href="CSS/cadastroobra.css" media="">
     <title>Cadastrar Obra</title>
 </head>
 
