--- a/lista.html
+++ b/lista.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="lista.css" media="">
+    <link rel="stylesheet" type="text/css" href="CSS/lista.css" media="">
     <title>Lista</title>
 </head>
 
